--- a/src/reactive/mvvm.html
+++ b/src/reactive/mvvm.html
@@ -11,7 +11,7 @@
 <body>
 	<div id="app">
 		<input type="text" v-model="name">
-		<span>{{name}}</div>
+		<span>{{name}}</span>
         </div>
     </body>
     <script src="Dep.js"></script>
